# Wattcoin

./: .gitignore  README.md  ROADMAP.md
core-node/: Cargo.toml  wattcoin-node-linux-v2.1.7.tar.gz.sha256
core-node/src/: api.rs  block.rs  blockchain.rs  lattice.rs  lib.rs  main.rs  network.rs  transaction.rs
core-node/tests/: basic_chain_tests.rs  pq_ring_signature_key_leak.rs
desktop-wallet/: package-lock.json  package.json  rename-linux.cjs  tauri.conf.json
desktop-wallet/src/: App.css  App.jsx  main.rs
desktop-wallet/src-tauri/: Cargo.toml  tauri.conf.json
desktop-wallet/src-tauri/icons/: icon.icns
desktop-wallet/src-tauri/src/: main.rs
