[package]
name = "wattcoin_core"
version = "2.1.7"
edition = "2024"

[dependencies]
chrono = "0.4"
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
bip39 = { version = "2.2.2", features = ["french"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
num-bigint = "0.4"
randomx-rs = "1.2"
blake3 = "1.8.4"
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
arti-client = { version = "0.19.0", features = ["tokio", "rustls", "onion-service-client"] }
tor-rtcompat = "0.19.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }