[package]
name = "wattcoin-wallet"
version = "2.1.7"
description = "Un Super Wallet Cypherpunk"
authors = ["you"]
edition = "2021"

[lib]
name = "qryptis_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bip39 = { version = "2.0.0", features = ["french"] }
hex = "0.4.3"
rand = "0.8.5"
bitcoin = { version = "0.32.0", features = ["base64", "rand"] }
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.6"
blake3 = "1.5.0"
reqwest = { version = "0.12", features = ["json", "socks"] }
curve25519-dalek = "4.1.2"
bdk = { version = "0.29.0", features = ["compiler", "use-esplora-reqwest", "reqwest-default-tls"] }
tokio = { version = "1", features = ["full"] }
monero = "0.21.0"
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
arti-client = { version = "0.22.0", features = ["tokio", "rustls", "onion-service-client", "full"] }
once_cell = "1.19.0"
tor-rtcompat = "0.22.0"
ldk-node = "0.6.2"
lightning-invoice = "0.26.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
